Refactor MultipleErrors and MultipleUpdateService for improved logging and string representation